--- a/src/index.css
+++ b/src/index.css
@@ -19,11 +19,14 @@
 }
 
 #root {
-  width: 100%;
-  height: 100%;
-  background-image: url("./assets/bg.png");
-  background-repeat: no-repeat;
-  background-size: cover;
+  width: 100svw;
+  height: 100svh;
+}
+
+div {
   display: flex;
-  justify-content: right;
+}
+
+* {
+  position: relative;
 }
